<resources>
    <string name="facebook_app_id">1273858492626640</string>
    <string name="near_books_tab_title">NEAR BOOKS</string>
    <string name="recommendations_tab_title">RECOMMENDATIONS</string>
    <string name="books_detail_toolbar_title">Book\'s Detail</string>
    <string name="synopsis_tab_title">SYNOPSIS</string>
    <string name="readers_comments_tab_title">READER\'S COMMENTS</string>
    <string name="confirm_book_adoption_dialog_message">Do you want to adopt this book?</string>
    <string name="book_adoption_positive_button_title">Adopt</string>
    <string name="book_not_available_for_adoption">This book aren\'t available for adoption.</string>
    <string name="dialog_error_title">Oooops...</string>
    <string name="dialog_success_title">Success</string>
    <string name="places_detail_toolbar_title">Place\'s Detail</string>
    <string name="information_tab_title">INFORMATION</string>
    <string name="available_books_tab_title">AVAILABLE BOOKS</string>
    <string name="near_books__toolbar_title">Near Places</string>
    <string name="confirm_book_donation_dialog_message">Do you want to donate this book in the selected place?</string>
    <string name="book_donation_positive_button_title">DONATE</string>
    <string name="internet_connection_error_message">Can\'t connect to server. Please, check your internet connection.</string>
    <string name="notifications_section_title">Notifications</string>
    <string name="profile_section_title">Profile</string>
    <string name="books_section_title">Books</string>
    <string name="places_section_title">Places</string>
    <string name="statistics_section_title">Month Statistics</string>
    <string name="about_section_title">About</string>
    <string name="settings_section_title">Settings</string>
    <string name="guest_email">guest@example.com</string>
    <string name="guest_name">Guest</string>
    <string name="search_view_hint">Find a book</string>
    <string name="readers_review_toolbar_subtitle_plural">characters_left</string>
    <string name="readers_review_toolbar_subtitle">character_left</string>
    <string name="success_review_upload_dialog_message">Review uploaded successfully.</string>
    <string name="error_review_upload_dialog_message">Can\'t upload review. Do you want to try again?</string>
    <string name="error_review_upload_dialog_title">Error</string>
    <string name="error_review_upload_dialog_positive_button_title">TRY AGAIN</string>
    <string name="user_registration_success_message">Welcome to Swappers for Readers, please do login and enjoy it!</string>
    <string name="email_validation_error_message">Invalid email!</string>
    <string name="mismatching_password_error_message">Passwords mismatches!</string>
    <string name="blank_password_error_message">Some passwords field must have at least 5 characters!</string>
    <string name="less_characters_name_error_message">Your name must have 3 characters at least!</string>
    <string name="gps_connection_error_message">Turn your GPS on and click on the book above.</string>
    <string name="no_books_available_at_place">There isn\'t books here. Please, donate one. :)</string>
    <string name="one_book_available_at_place">1 book available here.</string>
    <string name="many_books_available_at_place">books available here.</string>
    <string name="swappers_local_not_available_in_city">Sorry, there isn\'t a Swappers Point in your city.  :(</string>
    <string name="sick_server_error">The Swapper\'s server is feeling sick. Please, try again in a few minutes.</string>
    <string name="donated_tab_title">DONATIONS</string>
    <string name="retrieved_tab_title">ADOPTIONS</string>
    <string name="favourited_tab_title">FAVOURITED</string>
    <string name="no_name_found_message">No name found...</string>
    <string name="guest_city">Black Castle City</string>
    <string name="changed_birth_date_parcial_message">Your new birth date is</string>
    <string name="settings_item_change_profile_picture">Change profile picture</string>
    <string name="settings_item_change_cover_picture">Change cover picture</string>
    <string name="settings_item_change_birth_date">Change your birth date</string>
    <string name="settings_item_change_city">Change your current city</string>
    <string name="settings_item_change_password">Change your password</string>
    <string name="settings_item_logout">Logout</string>
    <string name="settings_item_delete_account">Delete my account</string>
    <string name="settings_error_update_password_message">Could not update your password, please try again later.</string>
    <string name="settings_sucess_update_password_message">Successfully updated password.</string>
    <string name="settings_error_update_image_message">Failed to update image, try again.</string>
    <string name="settings_sucess_update_image_message">Successfully updated image.</string>
    <string name="settings_error_update_city_state_user_message">Could not save your city / state.</string>
    <string name="settings_sucess_update_city_state_user_message">Your City/Town was saved.</string>
    <string name="settings_error_delete_user_message">Could not delete your account, please try again later.</string>
    <string name="settings_sucess_delete_user_message">Successfully delete account.</string>
    <string name="settings_error_update_birthday_message">Could not update your birthday, please try again later.</string>
    <string name="settings_sucess_update_birthday_message">Successfully updated birthday.</string>
    <string name="dialog_change_password_title">Change Password</string>
    <string name="dialog_change_password_message">Set correctly the fields bellow to change your password.</string>
    <string name="dialog_delete_account_title">Delete Account</string>
    <string name="dialog_delete_account_message">Do you really want to delete your account?</string>
    <string name="dialog_logout_title">Logout</string>
    <string name="dialog_logout_message">Do you really want to logout from your account?</string>
    <string name="dialog_change_city_title">Logout</string>
    <string name="dialog_change_city_message">Choose your state and city bellow.</string>
    <string name="service_not_implemented">Service not implemented yet... zZZzzZ</string>
    <string name="delete_account_dialog_positive_button_message">Account deleted successfully.</string>
    <string name="delete_account_dialog_negative_button_message">Thanks so much! We\'re working so hard to make you really happy. :]</string>
    <string name="logout_dialog_positive_button_message">Logout done successfully.</string>
    <string name="change_password_dialog_positive_button_message">Password changed successfully.</string>
    <string name="change_city_dialog_positive_button_parcial_message">City changed to</string>
    <string name="current_password_message">Please enter your current password</string>
    <string name="current_error_password_message">Incorrect current password</string>
    <string name="donors_tab_title">DONORS</string>
    <string name="hot_spots_tab_title">HOT SPOTS</string>
    <string name="best_books_tab_title">BEST BOOKS</string>
    <string name="no_comments_found_message">OMG, no comments found! Be the first to comment. ;) </string>
    <string name="book_title_for_no_book_statistics_found">There isn\'t donations this month.</string>
    <string name="book_author_for_no_book_statistics_found">No Author</string>
    <string name="donations_text_for_no_book_statistics_found">0 donations</string>
    <string name="adoptions_text_for_no_book_statistics_found">0 adoptions</string>
    <string name="donations_text_for_book_statistics">Donated %1$d times</string>
    <string name="adoptions_text_for_book_statistics">Adopted %1$d times</string>
    <string name="donor_name_for_no_month_donors_found">There isn\'t donations this month.</string>
    <string name="donor_age_for_no_month_donors_found">42?</string>
    <string name="donor_city_name_for_no_month_donors_found">Northerner Under The Hills</string>
    <string name="donations_text_for_no_month_donors_found">0 donations</string>
    <string name="donations">donations</string>
    <string name="error_performing_search_message">Error while performing search. Please, verify your keywords.</string>
    <string name="no_results_for_serch_message">No books found for this keywords.</string>
    <string name="progress_dialog_searching_message">Searching...</string>
    <string name="donation_processed_successfully_message">Donation processed successfully!</string>
    <string name="error_while_processing_donation_message">An error happened while processing your request. Try again in a little bit.</string>
    <string name="login_task_progress_dialog_message">Log in...</string>
    <string name="login_done_successfully_message">Be welcome!</string>
    <string name="login_error_message">Email address or/and password is incorrect.</string>
    <string name="progress_dialog_loading_message">Loading...</string>
    <string name="favourite_task_progress_dialog_message">Favouriting...</string>
    <string name="favouriting_error_message">Can\'t favourite this book. Try again in a few minutes.</string>
    <string name="register_task_progress_dialog_message">Saving your informations...</string>
    <string name="duplicate_email_error_message">This email address belongs to another account. Please, use another.</string>
    <string name="adoption_done_successfully_message">Your adoption was processed successfully!</string>
    <string name="adoption_error_message">Errors happened while registering this adoption. Try again later.</string>
    <string name="progress_dialog_uploading_message">Uploading...</string>
    <string name="progress_dialog_update_pwd_message">Update...</string>
    <string name="app_name">Swappers</string>
    <string name="title_activity_splash">Swappers</string>
    <string name="title_activity_main">Books</string>
    <string name="title_activity_login">Sign In</string>
    <string name="title_activity_register">Sign Up</string>
    <string name="title_activity_detail_book">Book\'s Details</string>
    <string name="title_activity_detail_place">Place\'s Details</string>
    <string name="title_activity_referenced_libraries">Referenced Components</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_reader_comment">Reviews</string>
    <string name="title_activity_donations_list_point">Near Places</string>
    <string name="title_activity_book">Books</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_send">Send</string>
    <string name="title_detail_book">Lorem Ipsum</string>
    <string name="author_detail_book">Lorem Ipsum</string>
    <string name="editor_detail_book">Lorem Ipsum</string>
    <string name="swappers">Swappers</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="be_a_swapper">Are not you a Swapper?</string>
    <string name="sign_up">SIGN UP NOW</string>
    <string name="best_places">Best Places</string>
    <string name="name_hotspot">Hot Spot\'s name</string>
    <string name="address_hotspot">Host Spot\'s address here</string>
    <string name="city_hotspot">Hotspot\'s</string>
    <string name="books_retrieved_hotspot">Retrieved quantity</string>
    <string name="donations_received_hotspot">Donations quantity</string>
    <string name="adapter_book_cover_description">Book Cover</string>
    <string name="adapter_book_title">Book Title</string>
    <string name="adapter_book_authors">Book Authors</string>
    <string name="adapter_book_publisher">Publisher</string>
</resources>