<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ar">

            <ImageView
                android:layout_width="128dp"
                android:layout_height="197dp"
                android:id="@+id/adapter_book_cover"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="@color/accent_material_dark"
                android:contentDescription="@string/adapter_book_cover_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/adapter_book_title"
                android:id="@+id/adapter_book_title"
                android:layout_alignTop="@+id/adapter_book_cover"
                android:layout_toEndOf="@+id/adapter_book_cover"
                android:layout_marginStart="15dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/adapter_book_authors"
                android:id="@+id/adapter_book_authors"
                android:layout_below="@+id/adapter_book_title"
                android:layout_alignStart="@+id/adapter_book_title"
                android:layout_alignRight="@+id/adapter_book_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/adapter_book_publisher"
                android:id="@+id/adapter_book_publisher"
                android:layout_below="@+id/adapter_book_authors"
                android:layout_alignStart="@+id/adapter_book_authors"
                android:layout_alignRight="@+id/adapter_book_authors" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/adapter_book_rating_bar"
                android:layout_alignBottom="@+id/adapter_book_cover"
                android:layout_marginRight="10dp"
                android:layout_alignStart="@+id/adapter_book_publisher"
                android:layout_alignParentStart="false"
                android:numStars="5"
                android:stepSize="0.1"
                android:paddingEnd="0dp"
                android:paddingStart="0dp"
                android:indeterminateOnly="false"
                android:progressTint="@color/color_accent_dark"
                style="@android:style/Widget.DeviceDefault.Light.RatingBar.Indicator"
                android:rating="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="4.7"
                android:id="@+id/adapter_book_avarage"
                android:layout_alignStart="@+id/adapter_book_publisher"
                android:textSize="70sp"
                android:layout_above="@+id/adapter_book_rating_bar"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/adapter_book_publisher"
                android:layout_marginTop="10dp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</FrameLayout>