<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ToolbarTheme"
        app:popupTheme="@style/ToolbarTheme.Menu"
        />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:elevation="4dp"
        tools:context="br.edu.ifce.swappers.swappers.activities.LoginActivity"
        android:background="@drawable/background_books"
        android:focusable="false">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/ic_launcher"
            android:id="@+id/cover_login"
            app:border_width="1dp"
            app:border_color="@color/transparent"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="-5dp"
            android:layout_marginBottom="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swappers"
            android:id="@+id/logo_text_view"
            android:layout_marginTop="140dp"
            android:textColor="@color/white"
            android:textSize="38dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textStyle="normal" />


        <android.support.v7.widget.CardView
            android:id="@+id/login_card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingEnd="10dp"
            android:paddingStart="5dp"
            android:layout_above="@+id/sign_in_button"
            android:layout_marginTop="180dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentStart="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_centerHorizontal="true"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_address"
                    android:id="@+id/email_text_view"
                    android:textColor="@color/black_text"
                    android:textSize="14dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="30dp" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/email_edit_text"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="40dp"
                    android:autoText="false"
                    android:textColor="@color/color_accent_dark"
                    android:layout_alignParentEnd="false"
                    android:layout_marginRight="10dp"
                    android:focusable="true"
                    android:textIsSelectable="false"
                    android:visibility="visible"
                    android:theme="@style/AppTheme" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:id="@+id/password_text_view"
                    android:textColor="@color/black_text"
                    android:textSize="14dp"
                    android:layout_marginTop="85dp"
                    android:layout_marginLeft="15dp" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/password_edit_text"
                    android:layout_marginTop="95dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/color_accent_dark"
                    android:textColorLink="@color/color_accent"
                    android:textIsSelectable="false"
                    android:layout_marginRight="10dp"
                    android:visibility="visible"
                    android:focusable="true"
                    android:theme="@style/AppTheme" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:id="@+id/sign_in_button"
            android:background="@color/color_accent_dark"
            android:layout_marginBottom="90dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:textSize="16dp"
            android:onClick="startMainActivity"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/be_a_swapper"
            android:id="@+id/sign_up_text_view"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="18dp"
            android:layout_above="@+id/sign_up_button"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:id="@+id/sign_up_button"
            android:background="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="@color/black_text"
            android:onClick="startRegisterActivity" />

    </RelativeLayout>

</LinearLayout>